# my-dashboad

./: .env.example  .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml  vercel.json
.claude/: settings.json
apps/agent/: .env.example  Dockerfile.old  Procfile  pyproject.toml  railway.json
apps/agent/src/: config.py  db.py  main.py
apps/agent/src/agents/news/: __init__.py  graph.py
apps/agent/src/agents/portfolio/: __init__.py  graph.py
apps/agent/src/agents/youtube/: __init__.py  graph.py  priority.py  quota_manager.py  summarizer.py  transcript.py
apps/agent/src/api/: routes.py
apps/web/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  vercel.json
apps/web/src/app/: dashboard-client.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/components/dashboard/: AgentThoughtPanel.tsx  AiNewsSection.tsx  HealthSection.tsx  MountainSection.tsx  NewsSection.tsx  PortfolioWidget.tsx  QuotaIndicator.tsx  StravaSection.tsx  VideoCard.tsx
apps/web/src/hooks/: useAgentStream.ts  useVideoFeed.ts
apps/web/src/lib/: api.ts
supabase/migrations/: 001_extensions.sql  002_news_articles.sql  003_youtube_videos.sql  004_portfolio.sql  005_quota_logs.sql
